# PicoCover

./: .gitignore  Cargo.toml  HOOKS.md  LICENSE  README.md  build.rs  github-banner.psd
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
assets/: github-banner.psd
crates/core/: Cargo.toml
crates/core/src/: errors.rs  game.rs  image_processing.rs  lib.rs
crates/native-gui/: Cargo.toml  build.rs
crates/native-gui/src/: build.rs  gui.rs  main.rs  processing.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
scripts/: .env.example  rename_gba_covers_from_dat.py  upload_to_r2.py
src/: gui.rs  main.rs  processing.rs  updater.rs
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/pkg/: pico_cover_wasm.d.ts  pico_cover_wasm.js  pico_cover_wasm_bg.js  pico_cover_wasm_bg.wasm  pico_cover_wasm_bg.wasm.d.ts
web/src/: App.css  App.tsx  App.tsx.backup  index.css  main.tsx  wasm.ts
web/src/components/: Footer.tsx  LogPanel.tsx  WizardSteps.tsx
web/src/components/steps/: CompleteStep.tsx  ProcessReadyStep.tsx  ProcessingStep.tsx  ScanStep.tsx  SelectStep.tsx  WelcomeStep.tsx
web/src/lib/: wasm.ts
web/src/pages/: App.tsx
web/src/styles/: index.css
worker/: README.md  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
worker/src/: index.ts
worker/test/: index.spec.ts
