[package]
name = "pico-cover"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Scaletta/PicoCover"
description = "Automatically download and convert Nintendo DS cover art for Pico Launcher"
license = "CC-BY-NC-4.0"
readme = "README.md"
build = "build.rs"

[[bin]]
name = "pico_cover"
path = "src/main.rs"


[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
color_quant = "1.1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "bmp"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
walkdir = "2.5"
url = "=2.4.1"
idna = "=1.0.0"
indexmap = "=2.2.6"
eframe = { version = "0.26", default-features = true, features = ["wgpu"] }
rfd = "0.14"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "PicoCover"
FileDescription = "Automatically download NDS cover art for Pico Launcher"
OriginalFilename = "pico_cover.exe"
LegalCopyright = "Copyright https://github.com/scaletta © 2026"

[package.metadata.bundle]
name = "PicoCover"
identifier = "com.scaletta.picocover"
version = "0.1.0"
icon = ["assets/icon.png"]
resources = ["assets/icon.png"]
category = "Utilities"
short_description = "Nintendo DS cover art downloader for Pico Launcher"
long_description = "Automatically download and convert Nintendo DS cover art from GameTDB for Pico Launcher"
copyright = "Copyright © 2026 Scaletta. Licensed under CC BY-NC 4.0"
osx_url_schemes = ["com.scaletta.picocover"]