[package]
name = "pico-cover-wasm"
version = "0.1.1"
edition = "2021"
authors = ["Scaletta"]
license = "CC-BY-NC-4.0"
repository = "https://github.com/Scaletta/PicoCover"
description = "WebAssembly bindings for PicoCover"

[lib]
crate-type = ["cdylib"]

[dependencies]
pico-cover-core = { path = "../core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
